add tailwind for styling

--- a/Challenge-1/UI/Todo-app/src/index.css
+++ b/Challenge-1/UI/Todo-app/src/index.css
@@ -1,3 +1,9 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* Original CSS can be removed or kept based on your preference */
+/* You can modify these styles with Tailwind classes in your components */
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
